fix overflowing h1 for large screens

--- a/app/assets/stylesheets/_web_dev.sass
+++ b/app/assets/stylesheets/_web_dev.sass
@@ -54,6 +54,9 @@
 
 .section
   margin-top: 60px
+  margin-left: auto
+  margin-right: auto
+  max-width: 1280px
   &::before
     content: "\00a0"
 
